--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,19 +1,24 @@
-<div class="row">
-    <div class="col-md-4 offset-md-4">
-      <form (ngSubmit)="onSignin(f)" #f="ngForm">
-        <div class="form-group">
-          <label for="username">Username</label>
-          <input type="text" id="username" name="username" ngModel class="form-control">
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" ngModel class="form-control">
-        </div>
-        <div class="alert alert-danger" role="alert" *ngIf="renderedKo">
-          {{responseMessage}}
-        </div>
-        <button class="btn btn-primary btn-block" type="submit">Login</button>
-      </form>
+
+<div class="d-flex justify-content-center mt-4">
+    <div class="card" style="width: 30rem;">
+
+      <div class="card-body">
+
+        <form (ngSubmit)="onSignin(f)" #f="ngForm">
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" ngModel class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" ngModel class="form-control">
+          </div>
+          <div class="alert alert-danger" role="alert" *ngIf="renderedKo">
+            {{responseMessage}}
+          </div>
+          <button class="btn btn-primary btn-block" type="submit">Login</button>
+        </form>
+    </div>
   </div>
 </div>
 
