--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,14 @@
 
-  <div class="row">
-      <div class="col-md-4 offset-md-4">
-        <h1>Benvenuto</h1>
-      </div>
-  </div>
-  <div class="row" *ngIf="!authService.isAuthenticated()" class="col-md-4 offset-md-4">
-      <button class="btn btn-primary" (click)="onLogin()">
-        Login
-      </button>
-      <button class="btn btn-primary" (click)="onRegistrati()">
-          Registrati
-      </button>
-  </div>
+<div class="d-flex justify-content-center mt-4">
+    <h1>Benvenuto nel Data Marketplace</h1>
+</div>
+
+<div class="row" *ngIf="!authService.isAuthenticated()" class="d-flex justify-content-center mt-4">
+    <button class="btn btn-primary btn-lg m-2" (click)="onLogin()">
+      Login
+    </button>
+    <button class="btn btn-info btn-lg m-2" (click)="onRegistrati()">
+        Registrati
+    </button>
+</div>
 
