--- a/src/app/archivi/archivi-utenti/archivi-utenti.component.html
+++ b/src/app/archivi/archivi-utenti/archivi-utenti.component.html
@@ -3,6 +3,7 @@
     <div class="p-2">
         <button (click)="onNuovoClick()"
             class="btn btn-primary btn-lg">
+            <fa [name]="'plus'" [size]=1></fa>
             Nuovo Archivio
         </button>
     </div>
