--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -16,7 +16,10 @@
           <div class="alert alert-danger" role="alert" *ngIf="renderedKo">
             {{responseMessage}}
           </div>
-          <button class="btn btn-primary btn-block" type="submit">Login</button>
+          <button class="btn btn-primary btn-block" type="submit">
+            <fa [name]="'sign-in'" [size]=1></fa>
+            Login
+          </button>
         </form>
     </div>
   </div>
