--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,9 +5,11 @@
 
 <div class="row" *ngIf="!authService.isAuthenticated()" class="d-flex justify-content-center mt-4">
     <button class="btn btn-primary btn-lg m-2" (click)="onLogin()">
+     <fa [name]="'sign-in'" [size]=1></fa>
       Login
     </button>
     <button class="btn btn-info btn-lg m-2" (click)="onRegistrati()">
+        <fa [name]="'user-plus'" [size]=1></fa>
         Registrati
     </button>
 </div>
