--- a/src/app/archivi/archivi-item/archivi-item.component.html
+++ b/src/app/archivi/archivi-item/archivi-item.component.html
@@ -1,7 +1,7 @@
 
 <div class="d-flex flex-column m-4">
     <div class="p-2">
-      <button (click)="onSalvaClick()"
+      <button (click)="onSalvaClick()" [disabled]="posizioni.length == 0"
         class="btn btn-success btn-lg">
         <fa [name]="'save'" [size]=1></fa>
         Salva
@@ -27,7 +27,7 @@
             Nuova Posizione
           </div>
           <div class="card-body">
-            <form (ngSubmit)="onSubmit(f)" #f="ngForm">
+            <form (ngSubmit)="onSubmit()" #f="ngForm">
  
               <div class="form-row" >
                 <div class="form-group col-md-6">
@@ -48,13 +48,13 @@
                 </div>
 
                 <div class="form-group col-md-6">
-                    <ngb-timepicker id="time" 
+                    <ngb-timepicker id="time" [(ngModel)]="time" name="time"
                       [seconds]="true" required>
                     </ngb-timepicker>
                 </div>
-                <span class="help-block" *ngIf="ctrl.invalid">
-                  L'orario è obbligatoria
-                </span>
+                <!-- <span class="help-block" *ngIf="time.invalid && (time.dirty || time.touched)">
+                    L'orario è obbligatorio
+                  </span> -->
               </div>
 
               <div class="form-row" >
@@ -77,7 +77,7 @@
               
                 
                 <div class="form-row">
-                  <button class="btn btn-primary" type="submit">
+                  <button class="btn btn-primary" type="submit" [disabled]="f.invalid">
                       <fa [name]="'plus'" [size]=1></fa>
                     Aggiungi in Archivio
                   </button> 
