--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,7 +19,11 @@
 
       <ul class="navbar-nav">
           <ng-template [ngIf]="authService.isAuthenticated()">
-            <li><a style="cursor:pointer;" class="nav-item" (click)="onLogout()">Logout</a></li>
+            <li>
+              <button class="btn btn-danger" (click)="onLogout()" title="Effettua logout">
+                  <fa [name]="'sign-out'" [size]=1></fa>
+              </button>
+          </li>
           </ng-template>
         </ul>
     </div>
