Docker file and dataPipe

--- a/src/app/posizioni/posizioni-modal/posizioni-modal.component.html
+++ b/src/app/posizioni/posizioni-modal/posizioni-modal.component.html
@@ -10,5 +10,5 @@
     <posizioni-list [posizioni]="archivio.posizioni"></posizioni-list>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
+    <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Chiudi</button>
   </div>
