--- a/src/app/archivi/archivi-item/archivi-item.component.html
+++ b/src/app/archivi/archivi-item/archivi-item.component.html
@@ -86,7 +86,10 @@
             </div>
           </div>
 
-          <posizioni-list [posizioni]="posizioni"></posizioni-list>
+          <posizioni-list
+            [renderedElimina]="true"
+            [posizioni]="posizioni">
+          </posizioni-list>
         
       </div>
     </div>
