--- a/src/app/archivi/archivi-list/archivi-list.component.html
+++ b/src/app/archivi/archivi-list/archivi-list.component.html
@@ -8,6 +8,7 @@
             <thead>
                 <tr>
                 <th scope="col">Id</th>
+                <th scope="col">Utente</th>
                 <th scope="col">Rappr. Timestamp</th>
                 <th scope="col">Rappr. Posizioni</th>
                 <th scope="col" *ngIf="renderedAcquisti">Num. Acquisti</th>
@@ -18,6 +19,7 @@
             <tbody>
                 <tr *ngFor="let archivio of mf.data"> 
                     <td [ngClass]="{'archivio-eliminato': !archivio.acquistabile}">{{archivio.id}}</td>
+                    <td [ngClass]="{'archivio-eliminato': !archivio.acquistabile}">{{archivio.utente}}</td>
                     <td [ngClass]="{'archivio-eliminato': !archivio.acquistabile}">{{archivio.rappr_timestamp}}</td>
                     <td [ngClass]="{'archivio-eliminato': !archivio.acquistabile}">{{archivio.rappr_posizioni}}</td>
                     <td *ngIf="renderedAcquisti" [ngClass]="{'archivio-eliminato': !archivio.acquistabile}">
